[gd_scene load_steps=13 format=2]

[ext_resource path="res://Music/zapsplat_office_calculator_button_press_single_002_11984.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Fblapix-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/backb.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Credits.gd" type="Script" id=4]


[sub_resource type="StreamTexture" id=20]
load_path = "res://.import/bg.png-b89c68ec9823b70820791d7ccb9439df.stex"

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fblapix-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=22]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "backd"
tracks/0/type = "value"
tracks/0/path = NodePath("back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.768627, 0.768627, 0.768627, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "backh"
tracks/0/type = "value"
tracks/0/path = NodePath("back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.87451, 0, 1 ) ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -2.0
margin_right = 682.0
margin_bottom = 383.0
texture = SubResource( 20 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -176.5
margin_right = 260.0
margin_bottom = 167.5
custom_fonts/font = SubResource( 2 )
text = "word wizard team: 
Siddhartha Venkatayogi, 
 Zachary Jason Wright
Ihsan Khawaja,


all assets created and owned by ww team


Sound effects obtained from https://www.zapsplat.com


Word wizard v1.0.0 fbla slc 2023"
align = 1
valign = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -91.5
margin_right = 260.0
margin_bottom = -17.5
custom_fonts/font = SubResource( 2 )
text = "Giant worm Battle: Ihsan Khawaja
Kraken Battle: Siddhartha Venkatayogi
Dragon Battle: Zachary Wright"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = 1.5
margin_right = 261.0
margin_bottom = 51.5
custom_fonts/font = SubResource( 2 )
text = "all assets created and owned by ww team"
align = 1
autowrap = true

[node name="Label4" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = 52.5
margin_right = 260.0
margin_bottom = 99.5
custom_fonts/font = SubResource( 2 )
text = "leaderboard server owned by silentwolf"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = 124.5
margin_right = 260.0
margin_bottom = 171.5
custom_fonts/font = SubResource( 2 )
text = "Word wizard v1.0.0 fbla slc 2023"
align = 1
autowrap = true

[node name="back" type="Button" parent="."]
margin_left = 13.0
margin_top = 312.0
margin_right = 123.0
margin_bottom = 382.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 22 )
custom_styles/focus = SubResource( 15 )
text = "Back"
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="back"]
root_node = NodePath("../..")
anims/RESET = SubResource( 21 )
anims/backd = SubResource( 18 )
anims/backh = SubResource( 19 )

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -30.0

[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
[connection signal="mouse_entered" from="back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
